fixed some layout issues in the about section and updated CV link

--- a/styles/sass/_aboutSection.scss
+++ b/styles/sass/_aboutSection.scss
@@ -13,6 +13,7 @@
         position: absolute;
         z-index: 30;
         margin-left: 15px;
+        padding-top: 20px;
     }
 
     figure img {
@@ -35,7 +36,7 @@
 
         position: absolute;
         z-index: 40;
-        top: 20%;
+        top: 7%;
         left: 48%;
         flex-wrap: wrap;
 
@@ -43,7 +44,7 @@
             display: grid;
             grid-template-columns: 110px 1fr;
             position: absolute;
-            top: 0%;
+            top: 5%;
             left: 0%;
 
             h4 {
@@ -64,14 +65,14 @@
 
             h3 {
                 font-size: 7.2rem;
-                margin: 30px 0 60px 0;
+                margin: 30px 0 30px 0;
                 line-height: 96px;
                 color: #e11416;
                 font-weight: 700;
             }
 
             p {
-                width: 60%;
+                width: 65%;
                 margin-left: 10rem;
                 font-size: 2rem;
                 line-height: 36px;
